pkginfo Changelog
=================

After 0.5 (unreleased)
----------------------

- Added 'Project-URL' for '1.2' PKG-INFO metdata (defined in the accepted
  version of PEP 345).


0.5 (2009-09-11)
----------------

- Marked package as non-zip-safe.

- Fixed Trove metadata misspelling.

- Restored compatibility with Python 2.4.

- Noted that the introspection of installed packages / modules works only
  in Python 2.6 or later.

- Added ``Index`` class as an abstraction over a collection of distributions.

- Added ``download_url_prefix`` argument to ``pkginfo`` script.  If passed,
  the script will use the prefix to synthesize a ``download_url`` for
  distributions which do not supply that value directly.

0.4.1 (2009-05-07)
------------------

- Fixed bugs in handling of installed packages which lack ``__file__``
  or ``PKG-INFO``.

0.4 (2009-05-07)
----------------

- Extended the console script to allow output as CSV or INI.  Also, added
  arguments to specify the metadata version and other parsing / output
  policies.

- Added support for the different metadata versions specified in PEPs
  241, 314, and 345.  Distributions now parse and expose only the attributes
  corresponding to their metadata version, which defaults to the version
  parsed from the ``PKG-INFO`` file.  The programmer can override that version
  when creating the distribution object.

0.3 (2009-05-07)
----------------

- Added support for introspection of "development eggs" (checkouts with
  ``PKG-INFO``, perhaps created via ``setup.py develop``).

- Added a console script, ``pkginfo``, which takes one or more paths
  on the command line and writes out the associated information.  Thanks
  to ``runeh`` for the patch!

- Added 'get_metadata' helper function, which dispatches a given path or
  module across the available distribution types, and returns a distribution
  object.  Thanks to ``runeh`` for the patch!

- Made distribution objects support iteration over the metadata fields.